# drf-example

./: .editorconfig  pyproject.toml
tutorial/: settings.py  urls.py
tutorial/quickstart/: serializers.py  urls.py  views.py
tutorial/snippets/: apps.py  models.py  serializers.py  urls.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
